carina-cli/tests/fixtures/negative/invalid_region.crn
# Negative test: invalid region value
# Expected: validation error for invalid region

provider awscc {
  region = awscc.Region.invalid_region_99
}

awscc.ec2.vpc {
  cidr_block = '10.0.0.0/16'
}
